# anaytic-AI

./: INVARIANT_COVERAGE.md  README.md  SMOKE_TEST_CHECKLIST.md  agent_state.db  agent_state.db-shm  agent_state.db-wal  check.ps1  check.sh  pyproject.toml  start.ps1  start.sh
fixtures/: sample_sales.csv
src/agent/: agent_service.py  db.py  executor.py  loop.py  memory.py  planner.py  profiler.py  reporter.py  subprocess_runner.py
src/ui/: app.py
tests/: conftest.py  test_db.py  test_executor.py  test_integration.py  test_loop.py  test_profiler.py  test_reporter.py
